--- a/styles/base.css
+++ b/styles/base.css
@@ -11,4 +11,17 @@ body, h1, h2, h3, p, ul {
     color: #333;
     text-align: center;
   }
+
+  footer p a {
+    margin: 0 10px;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+  
+  footer p a:hover {
+    color: #ff6b6b;
+  }
+  
   
